<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar"
<<<<<<< HEAD
        android:layout_marginTop="16dp"
=======
>>>>>>> 04e8260 (Add all files again)
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/updateGoal_field1"
<<<<<<< HEAD
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="345dp"
        android:text="@string/goalnameupdate"
=======
        android:layout_width="63dp"
        android:layout_height="28dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="345dp"
        android:text="@string/income_note"
>>>>>>> 04e8260 (Add all files again)
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/updateField1_text"
        android:layout_width="@dimen/addField1_textwidth"
        android:layout_height="@dimen/addField1_textheight"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateGoal_field1" />

    <TextView
        android:id="@+id/updateGoal_field2"
<<<<<<< HEAD
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="350dp"
        android:text="@string/goalamountupdate"
=======
        android:layout_width="112dp"
        android:layout_height="45dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="350dp"
        android:text="@string/addIncome_field2"
>>>>>>> 04e8260 (Add all files again)
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateField1_text" />

    <EditText
        android:id="@+id/updateField2_text"
        android:layout_width="@dimen/addField2_textwidth"
        android:layout_height="@dimen/addField2_textheight"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="172dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateGoal_field2" />

    <TextView
        android:id="@+id/textView3"
<<<<<<< HEAD
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="327dp"
        android:text="@string/goaldescriptionupdate"
=======
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="327dp"
        android:text="@string/addIncome_field3"
>>>>>>> 04e8260 (Add all files again)
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updateField2_text" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="192dp"
        android:layout_height="53dp"
<<<<<<< HEAD
        android:layout_marginBottom="180dp"
        android:backgroundTint="#74009688"
        android:text="update"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
=======
        android:layout_marginBottom="264dp"
        android:backgroundTint="#74009688"
        android:text="@string/updatebutton"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/include"
        app:layout_constraintEnd_toEndOf="parent"
>>>>>>> 04e8260 (Add all files again)
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/back_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
<<<<<<< HEAD
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
=======
        android:layout_marginTop="544dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
>>>>>>> 04e8260 (Add all files again)
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

    <EditText
        android:id="@+id/updateField3_text"
<<<<<<< HEAD
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.324"
=======
        android:layout_width="327dp"
        android:layout_height="43dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
>>>>>>> 04e8260 (Add all files again)
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageButton
        android:id="@+id/delete_button"
<<<<<<< HEAD
        android:layout_width="32dp"
        android:layout_height="41dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/updateGoal_field1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_24" />
=======
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_delete_24"
        tools:layout_editor_absoluteY="87dp" />
>>>>>>> 04e8260 (Add all files again)


</androidx.constraintlayout.widget.ConstraintLayout>